# cloudgrow-sim

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: cli-reference.md  creating-custom-scenarios.md  greenhouse-simulator-claude-code-prompt.md  quick-reference.md  scenarios-guide.md  scenarios.md  user-guide.md  yaml-configuration.md
examples/: basic_simulation.py
examples/scenarios/: basic.yaml  full-climate.yaml  summer-cooling.yaml  winter-heating.yaml
src/cloudgrow_sim/: __init__.py  __main__.py  main.py
src/cloudgrow_sim/components/: __init__.py
src/cloudgrow_sim/components/actuators/: __init__.py  cooling.py  curtains.py  fans.py  heating.py  vents.py
src/cloudgrow_sim/components/modifiers/: __init__.py  covering.py  thermal_mass.py
src/cloudgrow_sim/components/sensors/: __init__.py  co2.py  humidity.py  radiation.py  temperature.py  wind.py
src/cloudgrow_sim/controllers/: __init__.py  hysteresis.py  pid.py  schedule.py  staged.py
src/cloudgrow_sim/core/: __init__.py  base.py  config.py  events.py  registry.py  state.py
src/cloudgrow_sim/physics/: __init__.py  constants.py  heat_transfer.py  psychrometrics.py  solar.py  ventilation.py
src/cloudgrow_sim/simulation/: __init__.py  engine.py  factory.py  scenarios.py  weather.py
tests/: conftest.py  test_cli.py  test_main.py  test_scenarios_yaml.py
tests/test_components/: test_actuators.py  test_modifiers.py  test_sensors.py
tests/test_controllers/: test_hysteresis.py  test_pid.py  test_schedule.py  test_staged.py
tests/test_core/: test_config.py  test_events.py  test_registry.py  test_state.py
tests/test_physics/: __init__.py  test_heat_transfer.py  test_psychrometrics.py  test_solar.py  test_ventilation.py
tests/test_simulation/: test_engine.py  test_factory.py  test_scenarios.py  test_weather.py
